--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,19 +1,43 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:0.5.+'
+    }
+}
+
+repositories {
+    mavenCentral()
+}
+
 apply plugin: 'android-library'
 
 dependencies {
     compile 'com.android.support:support-v4:18.0.+'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
 
 android {
-  compileSdkVersion 17
-  buildToolsVersion '17'
+    compileSdkVersion 18
+    buildToolsVersion '18.0.1'
 
-  sourceSets {
-    main {
-      manifest.srcFile 'AndroidManifest.xml'
-      java.srcDirs = ['src']
-      res.srcDirs = ['res']
+    defaultConfig {
+        minSdkVersion 4
+        targetSdkVersion 18
     }
-  }
+
+    sourceSets {
+        main {
+            manifest.srcFile 'AndroidManifest.xml'
+            java.srcDirs = ['src']
+            res.srcDirs = ['res']
+        }
+    }
 }
+
+
+
+
 
